Call to action widget > Content > Content > Title & Description > Fixed large gap between controls when bottom control has hidden label

--- a/assets/dev/scss/editor/panel/_controls.scss
+++ b/assets/dev/scss/editor/panel/_controls.scss
@@ -298,6 +298,19 @@
 			}
 		}
 	}
+
+	&.elementor-control-hidden-label.elementor-label-block {
+
+		> .elementor-control-content {
+
+			> .elementor-control-field {
+
+				> .elementor-control-input-wrapper {
+					margin-top: 0;
+				}
+			}
+		}
+	}
 }
 
 .elementor-label-inline {
